objects/maps__TerritoryAggregationSetting__c.object
<CustomObject>
    <fields>
        <fullName>maps__MarkerLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Marker Layer</label>
        <referenceTo>maps__MarkerLayer__c</referenceTo>
        <relationshipLabel>Maps Territory Aggregation Settings</relationshipLabel>
        <relationshipName>TerritoryAggregationSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__TerritoryLayer__c</fullName>
        <label>Maps Territory Layer</label>
        <referenceTo>maps__Layer__c</referenceTo>
        <relationshipLabel>Maps Territory Aggregation Settings</relationshipLabel>
        <relationshipName>TerritoryAggregationSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__ValueField__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Territory Aggregation Setting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Aggregation Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>